Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61475

Can not input Chinese in TextEdit when load qml in QQuickWidget

XMLWordPrintable

    • 9bfa722bc0b67e01f35d78e1165602e174ae3b02 (qt/qtdeclarative/dev) 362f6999a52849482e73915ca37ed4b6cc9ff9aa (qtdeclarative/dev) 791fe6e5c2d0ae3533c9aa10ffa91deae46929ee (qtdeclarative/5.15)

      I have a project that developed by QWidget, and when I add a new feature, I used QML. By creating a QQuickWidget and added it into QWidget, I found a way to combine QML widgets  with my old QMainWindow.

      But the TextEdit that create in QQuickWidget can not input Chinese! Only after minimize the  and reactive the main window that I can input Chinese.

       

      The project in Attachment is a simple demo that add a TextEdit in Rectange, and display the QML widgets in QQuickWidget.

        1. TextEditBug.zip
          5 kB
        2. image-2018-12-05-10-52-10-535.png
          image-2018-12-05-10-52-10-535.png
          10 kB
        3. image-2018-12-05-10-54-01-694.png
          image-2018-12-05-10-54-01-694.png
          23 kB
        4. QQuickWidgetChinese.rar
          32 kB
        5. TIM图片20190624170041.png
          TIM图片20190624170041.png
          51 kB
        6. quickwidget.7z
          1 kB
        For Gerrit Dashboard: QTBUG-61475
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            anyetiangong liyu
            Votes:
            3 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes