QQuickWidget: Propagate focusObjectChanged

When the offscreen window focuses an item, make sure
we set keyboard focus to the QQuickWidget in the widget
chain.

[ChangeLog][QQuickWidget] Fixed an issue where virtual
keyboards and other input methods would not react to
input fields inside a QQuickWidget.

Fixes: QTBUG-61475
Pick-to: 5.15
Change-Id: Ice2905a33ab0f4669622367ddae2c0ed3a1f841c
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>